<resources>
    <string name="app_name">JobHuntApp</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="responses">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="login_to_acc">Вход в личный кабинет</string>
    <string name="job_search">Поиск работы</string>
    <string name="login_with_pass">Войти с паролем</string>
    <string name="email">Электронная почта</string>
    <string name="continue_text">Продолжить</string>
    <string name="employee_search">Поиск сотрудников</string>
    <string name="access_to_cv_db">Размещение вакансий и доступ к базе резюме</string>
    <string name="i_search_employee">Я ищу сотрудников</string>
    <string name="wrong_email">Вы ввели неверный e-mail</string>
    <string name="send_code_to">Отправили код на</string>
    <string name="confirm_code_article">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm">Подтвердить</string>
    <string name="key_words">Должность, ключевые слова</string>
    <string name="vacancy_for_you">Вакансии для вас</string>
    <string name="reply">Откликнуться</string>
    <string name="more_vacancies">Еще вакансии</string>
    <string name="hide">Скрыть</string>
    <string name="share">Поделиться</string>
    <string name="favorite">Избранные</string>
    <string name="required_experience">Требуемый опыт:</string>
    <string name="people_applied">человек уже откликнулось</string>
    <string name="looking_now1">человек сейчас смотрит</string>
    <string name="looking_now2">человека сейчас смотрят</string>
    <string name="looking_now3">человек сейчас смотрят</string>
    <string name="your_tasks">Ваши задачи</string>
    <string name="ask_question">Задайте вопрос работодателю</string>
    <string name="receiveQuestion">Он получит его с откликом на вакансию</string>
    <string name="apply">Откликнуться</string>
    <string name="resume_to_apply">Резюме для отклика</string>
    <string name="add_cover_letter">Добавить сопроводительное</string>
    <string name="your_cover_letter">Ваше сопроводительное письмо</string>
    <string name="vacancy">вакансия</string>
    <string name="position_compliance_vacancies">Должность по подходящим вакансиям</string>
    <string name="compliance_vacancies">вакансий</string>
    <string name="map">Карта</string>
    <string name="by_matches">По соответствию</string>
    <string name="by_date">По дате</string>
    <string name="by_desc_salary">По убыванию уровня дохода</string>
    <string name="by_asc_salary">По возрастанию уровня дохода</string>
    <string name="published">Опубликовано</string>

    <string-array name="extraFilters">
        <item>@string/by_date</item>
        <item>@string/by_desc_salary</item>
        <item>@string/by_asc_salary</item>
        <item>@string/by_matches</item>
    </string-array>
</resources>