<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:enabled="true"
        android:icon="@drawable/ic_search_24"/>

    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_outline"/>

    <item
        android:id="@+id/responses"
        android:title="@string/responses"
        android:enabled="true"
        android:icon="@drawable/ic_mail_24"/>

    <item
        android:id="@+id/messages"
        android:title="@string/messages"
        android:enabled="true"
        android:icon="@drawable/ic_message"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"/>
</menu>