<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    tools:context=".fragments.bottomsheet.BottomSheetApplyVacancyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <View
            android:id="@+id/view_dragHandle"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:background="@drawable/drag_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView_userAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/googleg_standard_color_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_dragHandle" />

        <TextView
            android:id="@+id/textView_resumeToApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/resume_to_apply"
            app:layout_constraintStart_toEndOf="@id/imageView_userAvatar"
            app:layout_constraintTop_toBottomOf="@id/view_dragHandle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="UI/UX Designer"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageView_userAvatar"
            app:layout_constraintStart_toEndOf="@id/imageView_userAvatar"
            app:layout_constraintTop_toBottomOf="@id/textView_resumeToApply" />

        <View
            android:id="@+id/view_separatingLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_userAvatar" />

        <EditText
            android:id="@+id/editText_coverLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/your_cover_letter"
            android:inputType="text"
            android:singleLine="false"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_separatingLine" />

        <Button
            android:id="@+id/button_addCoverLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/add_cover_letter"
            android:textAlignment="center"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_coverLetter"
            android:visibility="visible"/>

        <Button
            android:id="@+id/button_apply"
            style="@style/ButtonGreenStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_addCoverLetter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>