<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <LinearLayout
            android:id="@+id/linearLayout_searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_searchBar"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search_16"
                    android:drawablePadding="16dp"
                    android:hint="@string/key_words" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <ImageButton
                    android:id="@+id/imageButton_filters"
                    style="@style/TransparentImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:src="@drawable/ic_filter" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_recommends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_searchBar"
            tools:listitem="@layout/rv_offer_item" />

        <TextView
            android:id="@+id/textView_vacancyForYou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/vacancy_for_you"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_recommends" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_vacancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_vacancyForYou"
            tools:listitem="@layout/rv_vacancy_item" />

        <Button
            android:id="@+id/button_moreVacancies"
            style="@style/ButtonShortStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/more_vacancies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_vacancy" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>