<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragments.VacancyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView_vacancyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="UI/UX Designer"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_vacancySalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20 000 до 50 000 ₽ на руки"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_vacancyTitle" />

        <TextView
            android:id="@+id/textView_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/required_experience"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_vacancySalary" />

        <TextView
            android:id="@+id/textView_schedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Полная занятость, полный день"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_experience" />

        <LinearLayout
            android:id="@+id/linearLayout_greenCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_schedules">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_appliedNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardView_green"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/textView_appliedNumber"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:text="@string/people_applied"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imageView_applied"/>

                    <ImageView
                        android:id="@+id/imageView_applied"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_applied"
                        app:layout_constraintBottom_toBottomOf="@id/textView_appliedNumber"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textView_appliedNumber" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_lookingNow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardView_green"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/textView_lookingNow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/looking_now2"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imageView_lookingNow"/>

                    <ImageView
                        android:id="@+id/imageView_lookingNow"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/ic_applied"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_companyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_greenCards">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/textView_companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MoscowProgrammCo"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_verifiedCompany"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_verified"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_companyName"
                    app:layout_constraintStart_toEndOf="@id/textView_companyName"
                    app:layout_constraintTop_toTopOf="@id/textView_companyName" />

                <ImageView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_companyName" />

                <TextView
                    android:id="@+id/textView_companyAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Казань, улица Чистопольская, 20/10"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mapView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_companyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Мы разрабатываем мобильные приложения, web-приложения и сайты под ключ.\n\nНам в команду нужен UX/UI Designer!"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_companyAddress" />

        <TextView
            android:id="@+id/textView_yourTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/your_tasks"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textView_companyDescription" />

        <TextView
            android:id="@+id/textView_responsibilitiesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- Разработка дизайна Web+App (обязательно Figma)\n\n- Работа над созданием и улучшением систем;\n\n- Взаимодействие с командами frontend-разработки и backend-разработки"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_yourTasks" />

        <TextView
            android:id="@+id/textView_askQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ask_question"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_responsibilitiesDescription" />

        <TextView
            android:id="@+id/textView_receiveQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/receiveQuestion"
            android:textColor="@color/light_grey_text"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_askQuestion" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_receiveQuestion"
            tools:listitem="@layout/rv_vacancy_question_item" />

        <Button
            android:id="@+id/button_searchEmployee"
            style="@style/ButtonGreenStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/apply"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_questions" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>